--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "rabbit-downloader-server",
-  "version": "0.0.1",
+  "version": "1.10",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "start-bun": "bun run --bun src/main.ts",
+    "start:dev-bun": " bun --watch run --preload type-checker.ts --bun src/main.ts",
+    "start:prod-bun": "bun swagger && bun start-bun",
+    "entity": "bun run --bun mikro-orm generate-entities --save",
+    "swagger": "nest start --swagger",
+    "_": "--------------------------------------------------",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -20,8 +26,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.3.10",
+    "@mikro-orm/mysql": "^6.3.10",
+    "@mikro-orm/nestjs": "^6.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -30,6 +40,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bun": "^1.1.9",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
