--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^6.3.10",
+    "@mikro-orm/entity-generator": "^6.3.10",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
