--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^6.3.14-dev.33",
+    "@mikro-orm/mysql": "^6.3.14-dev.33",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
