--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nest start",
     "start:bun": "bun run --bun src/main.ts",
     "start:dev": "nest start --watch",
+    "start:dev:bun": "bun --watch run --preload type-checker.ts --bun src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -34,6 +35,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bun": "^1.1.12",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
