--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@mikro-orm/core": "^6.3.14-dev.35",
     "@mikro-orm/mysql": "^6.3.14-dev.35",
+    "@mikro-orm/nestjs": "^6.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
