--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:bun": "bun run --bun src/main.ts",
     "start:dev": "nest start --watch",
     "start:dev:bun": "bun --watch run --preload type-checker.ts --bun src/main.ts",
     "start:debug": "nest start --debug --watch",
@@ -19,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "livereload:bun": "bun x --bun livereload src -e ts"
   },
   "dependencies": {
     "@mikro-orm/core": "^6.3.14-dev.35",
