--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cookie-parser": "^1.4.7",
     "passport-custom": "^1.1.1",
     "passport-jwt": "^4.0.1",
+    "playwright": "^1.48.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
