--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mikro-orm/core": "^6.3.14-dev.35",
     "@mikro-orm/mysql": "^6.3.14-dev.35",
     "@mikro-orm/nestjs": "^6.0.2",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -72,16 +73,27 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "jsonwebtoken": "*"
+    "jsonwebtoken": "*",
+    "ansi-colors": "*"
   },
   "jest": {
+    "forceExit": true,
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "moduleNameMapper": {
+      "@/(.*)$": "<rootDir>/src/$1"
+    },
+    "roots": [
+      "src",
+      "test"
+    ],
+    "testMatch": [
+      "**/*.e2e-spec.ts",
+      "**/*.spec.ts"
+    ],
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
