--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "livereload:bun": "bun x --bun livereload src -e ts"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.3.14-dev.35",
-    "@mikro-orm/mysql": "^6.3.14-dev.35",
+    "@mikro-orm/core": "^6.3.14-dev.63",
+    "@mikro-orm/mysql": "^6.3.14-dev.63",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^10.0.0",
@@ -45,8 +45,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^6.3.14-dev.35",
-    "@mikro-orm/entity-generator": "^6.3.14-dev.35",
+    "@mikro-orm/cli": "^6.3.14-dev.63",
+    "@mikro-orm/entity-generator": "^6.3.14-dev.63",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -73,8 +73,8 @@
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
-    "jsonwebtoken": "*",
-    "ansi-colors": "*"
+    "ansi-colors": "*",
+    "jsonwebtoken": "*"
   },
   "jest": {
     "forceExit": true,
