--- a/package.json
+++ b/package.json
@@ -10,20 +10,19 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:dev:bun": "bun --watch run --preload type-checker.ts --bun src/main.ts",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "livereload:bun": "bun x --bun livereload src -e ts"
+    "livereload": "npx livereload src -e ts"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.3.14-dev.63",
-    "@mikro-orm/mysql": "^6.3.14-dev.63",
+    "@mikro-orm/core": "6.3.14-dev.35",
+    "@mikro-orm/mysql": "6.3.14-dev.35",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^10.0.0",
@@ -45,12 +44,11 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^6.3.14-dev.63",
-    "@mikro-orm/entity-generator": "^6.3.14-dev.63",
+    "@mikro-orm/cli": "6.3.14-dev.35",
+    "@mikro-orm/entity-generator": "6.3.14-dev.35",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bun": "^1.1.12",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
