--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,8 +21,8 @@
     "livereload": "npx livereload src -e ts"
   },
   "dependencies": {
-    "@mikro-orm/core": "^6.3.14-dev.63",
-    "@mikro-orm/mysql": "^6.3.14-dev.63",
+    "@mikro-orm/core": "6.3.14-dev.56",
+    "@mikro-orm/mysql": "6.3.14-dev.56",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^10.0.0",
@@ -33,7 +33,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/swagger": "^8.0.0",
+    "@nestjs/swagger": "^8.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -44,8 +44,8 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "^6.3.14-dev.63",
-    "@mikro-orm/entity-generator": "^6.3.14-dev.63",
+    "@mikro-orm/cli": "6.3.14-dev.56",
+    "@mikro-orm/entity-generator": "6.3.14-dev.56",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
