--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main",
+    "start": "NODE_ENV=dev nest start",
+    "start:dev": "NODE_ENV=dev nest start --watch",
+    "start:debug": "NODE_ENV=dev nest start --debug --watch",
+    "start:prod": "NODE_ENV=prod node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -68,7 +68,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "win-node-env": "^0.6.1"
   },
   "peerDependencies": {
     "ansi-colors": "*",
