--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "imports": {
+    "#@/*": {
+      "typescripts": "./src/*.ts",
+      "types": "./src/*.d.ts",
+      "default": "./dist/src/*.js"
+    }
+  },
   "name": "rabbit-downloader-server",
   "version": "1.12",
   "description": "",
@@ -11,7 +18,7 @@
     "start": "NODE_ENV=dev nest start",
     "start:dev": "NODE_ENV=dev nest start --watch",
     "start:debug": "NODE_ENV=dev nest start --debug --watch",
-    "start:prod": "NODE_ENV=prod node dist/src/main",
+    "start:prod": "NODE_ENV=dev node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,8 +28,8 @@
     "livereload": "npx livereload src -e ts"
   },
   "dependencies": {
-    "@mikro-orm/core": "6.3.14-dev.56",
-    "@mikro-orm/mysql": "6.3.14-dev.56",
+    "@mikro-orm/core": "6.3.14-dev.74",
+    "@mikro-orm/mysql": "6.3.14-dev.74",
     "@mikro-orm/nestjs": "^6.0.2",
     "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^10.0.0",
@@ -44,11 +51,13 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@mikro-orm/cli": "6.3.14-dev.56",
-    "@mikro-orm/entity-generator": "6.3.14-dev.56",
+    "@mikro-orm/cli": "6.3.14-dev.74",
+    "@mikro-orm/entity-generator": "6.3.14-dev.74",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.9.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
@@ -83,7 +92,7 @@
       "ts"
     ],
     "moduleNameMapper": {
-      "@/(.*)$": "<rootDir>/src/$1"
+      "#@/(.*)$": "<rootDir>/src/$1"
     },
     "roots": [
       "src",
