--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,10 +2,9 @@
   "extends": "./tsconfig.json",
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"],
   "compilerOptions": {
-    "baseUrl": "lksdjfkl",
     "paths": {
       "#@": [
-        "./src/*"
+        "src"
       ]
     }
   }
