--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,5 @@ jobs:
   deploy:
     runs-on: ubuntu-24.04
     steps:
-      - name: checkout
-        uses: actions/checkout@v4
-      - name: run
-        run: ls -l
+      - uses: actions/checkout@v4
+      - run: ls -l
