--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 
-#      test
+      #      test
       - develop
 
 jobs:
@@ -13,4 +13,5 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - run: ls -l
+
+      - run: docker compose -v
