--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         condition: service_healthy
     init: true
     ipc: host
-    entrypoint: [ npx, jest ]
+    entrypoint: [ npx, jest, --bail ]
 
   server:
     build: .
