--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,7 @@ name: deploy
 on:
   push:
     branches:
-      - main
-
-      #      test
+      #      - main
       - develop
 
 jobs:
@@ -14,4 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
+        with:
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
       - run: docker compose up test --build
+
+
+
+
