--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
-      - uses: docker/build-push-action@v6
+      - uses: docker/bake-action@v5
         with:
+          push: false
           load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - run: docker compose up test --build
+          set: |
+            *.cache-to=type=gha,mode=max
+            *.cache-from=type=gha
+      - run: docker compose up test
 
 
 
