--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,8 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
-          pull: true
+          push: false
           load: true
-
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
