--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,15 +11,19 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+
+      - uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-docker-cache
+          path: /tmp/.docker-cache
+
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
           load: true
           set: |
-            *.cache-from=type=gha
-            *.cache-to=type=gha,mode=max
+            *.cache-from=type=local,src=/tmp/.docker-cache
+            *.cache-to=type=local,dest=/tmp/.docker-cache,mode=max
+
       - run: docker compose up -d --wait test-db
-
-
-
 
