--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,19 @@ jobs:
 
       - uses: actions/cache@v4
         with:
-          key: ${{ runner.os }}-docker-cache
-          path: /tmp/.docker-cache
+          key: ${{ runner.os }}-buildx-cache
+          path: /tmp/.buildx-cache
 
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
           load: true
           set: |
-            *.cache-from=type=local,src=/tmp/.docker-cache
-            *.cache-to=type=local,dest=/tmp/.docker-cache,mode=max
+            *.cache-from=type=local,src=/tmp/.buildx-cache
+            *.cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max
 
       - run: docker compose up -d --wait test-db
 
+      - run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
