--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/cache@v4
-        with:
-          key: ${{ runner.os }}-buildx-cache
-          path: /tmp/.buildx-cache
+#      - uses: actions/cache@v4
+#        with:
+#          key: ${{ runner.os }}-buildx-cache
+#          path: /tmp/.buildx-cache
 
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
           load: true
           set: |
-            *.cache-from=type=local,src=/tmp/.buildx-cache
-            *.cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max
+            *.cache-from=type=gha
+            *.cache-to=type=gha,mode=max
 
       - run: docker compose up -d --wait test-db
 
-      - run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+#      - run: |
+#          rm -rf /tmp/.buildx-cache
+#          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
