--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,12 +20,11 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
-          load: true
+#          load: true
           set: |
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-
-      - run: docker compose up -d --wait test-db
+#      - run: docker compose up -d --wait test-db
 
 #      - run: |
 #          rm -rf /tmp/.buildx-cache
