--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,12 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
-#          load: true
-
+          load: true
           set: |
+            *.output=type=local,dest=/tmp/.docker-cache            
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
-            
-
+      - run: cd /tmp/.docker-cache && ls && du -sh
 #      - run: docker compose up -d --wait test-db
 
 #      - run: |
