--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           load: true
           set: |
-            *.output=type=local,dest=/tmp/.docker-cache            
+            *.output=type=local
             *.cache-from=type=gha
             *.cache-to=type=gha,mode=max
       - run: cd /tmp/.docker-cache && ls && du -sh
