--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/bake-action@v5
         with:
-          load: true
+#          load: true
           set: |
             *.cache-from=type=local,src=/tmp/.docker-cache
             *.cache-to=type=local,dest=/tmp/.docker-cache-new,mode=max
