--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,12 @@ jobs:
           key: ${{ runner.os }}-docker-cache
           path: /tmp/.docker-cache
       - uses: docker/setup-buildx-action@v3
-      - uses: docker/bake-action@v5
-        with:
-#          load: true
-          set: |
-            *.cache-from=type=local,src=/tmp/.docker-cache
-            *.cache-to=type=local,dest=/tmp/.docker-cache-new,mode=max
+#      - uses: docker/bake-action@v5
+#        with:
+##          load: true
+#          set: |
+#            *.cache-from=type=local,src=/tmp/.docker-cache
+#            *.cache-to=type=local,dest=/tmp/.docker-cache-new,mode=max
 
 #      - run: docker compose up test
 
