--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,9 @@ services:
     build:
       target: test-builder
       cache_from:
-        - type=local
-        - src=/tmp/.docker-cache
+        - type=local,src=/tmp/.docker-cache
       cache_to:
-        - dest=/tmp/.docker-cache-new
-        - mode=max
+        - type=local,dest=/tmp/.docker-cache-new,mode=max
 
     depends_on:
       test-db:
