--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       - run: |
           sudo systemctl stop docker
           sudo systemctl stop docker.socket
+          sudo chmod -R 755 /var/lib/docker
 
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
