--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,8 @@ jobs:
       - run: |
           sudo systemctl stop docker
           sudo systemctl stop docker.socket
-          sudo chmod -R 755 /var/lib/docker
+          sudo rm -rf /var/lib/docker
+#          sudo chmod -R 755 /var/lib/docker
 
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
