--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,8 @@ jobs:
           sudo systemctl stop docker
           sudo systemctl stop docker.socket
           sudo rm -rf /var/lib/docker
-#          sudo chmod -R 755 /var/lib/docker
+          sudo mkdir /var/lib/docker -p
+          sudo chmod -R 755 /var/lib/docker
 
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
