--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,7 @@ jobs:
           echo 2
           docker images
           echo 3
+          sudo chown -R $USER:$USER ./.docker-cache
 
 #          docker image
 
