--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          mkdir ./.docker-cache/{image,overlay2}
+          mkdir -p ./.docker-cache/{image,overlay2}
           sudo chown -R $USER:$USER ./.docker-cache
 
       - uses: actions/cache@v4
