--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,8 @@ jobs:
           sudo dockerd --debug &
           sleep 5
 
+      - run: docker pull mysql:8.0.36
+
       - run: |
           docker images
           sudo chown -R $USER:$USER ./.docker-cache
