--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       - run: |
           mkdir -p ./.docker-cache/{image,overlay2}
           sudo chown -R $USER:$USER ./.docker-cache
+          sudo chmod -R 777 ./.docker-cache
 
       - uses: actions/cache@v4
         with:
@@ -51,6 +52,7 @@ jobs:
       - run: |
           docker images
           sudo chown -R $USER:$USER ./.docker-cache
+          sudo chmod -R 777 ./.docker-cache
 #          docker image
 
       #      - uses: docker/setup-buildx-action@v3
