--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          mkdir -p ./docker-cache/{image,overlay2}
+          mkdir -p ./.docker-cache/{image,overlay2}
           sudo chmod -R 777 ./.docker-cache
 
       - uses: actions/cache@v4
