--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-24.04
     steps:
-#      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - uses: actions/cache@v4
         with:
@@ -48,4 +48,3 @@ jobs:
       - run: |
           docker images
           sudo chmod -R 777 /tmp/.docker-cache
-
