--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
       - run: id -gn
 
       - run: sudo chmod -R 777 /var/lib/docker
+      - run: sudo chown -R runner:docker /var/lib/docker
+
       - run: rm -rf /var/lib/docker/{image,overlay2}
       - run: mkdir -p /var/lib/docker/image
       - run: mkdir -p /var/lib/docker/overlay2
