--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,15 +18,11 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - run: sudo chmod -R 777 /var/lib/docker
-
       - uses: actions/cache@v4
         with:
           key: ${{ runner.os }}-docker-cache-${{ github.sha }}
           restore-keys: ${{ runner.os }}-docker-cache-
-          path: |
-            /var/lib/docker/image
-            /var/lib/docker/overlay2
+          path: ./docker.tar
 
       - name: Start Docker daemon
         run: |
@@ -47,6 +43,6 @@ jobs:
           sleep 2
 
       - run: sudo chmod -R 777 /var/lib/docker
-      - run: sudo tar -czf ./docker.tar.gz /var/lib/docker
-      - run: ls
+      - run: sudo tar -cf ./docker.tar /var/lib/docker
+      - run: du -lh
 #      - run: sudo tar -zxvf aaa.tar.gz
