--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
 
       - run: sudo tar -xf ./docker.tar
       - run: ls -la
+      - run: ls var
+      - run: ls var/lib
+      - run: ls var/lib/docker
       - run: ls docker
 
       - name: Start Docker daemon
