--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,12 +24,10 @@ jobs:
           restore-keys: ${{ runner.os }}-docker-cache-
           path: ./docker.tar
 
-      - run: sudo tar -xf ./docker.tar
-      - run: ls -la
-      - run: sudo ls var
-      - run: sudo ls var/lib
-      - run: sudo ls var/lib/docker
-      - run: ls docker
+#      - run: sudo tar -xf ./docker.tar
+#      - run: ls -la
+#      - run: sudo ls docker
+#      - run: ls docker
 
       - name: Start Docker daemon
         run: |
@@ -50,6 +48,6 @@ jobs:
           sleep 2
 
       - run: sudo chmod -R 777 /var/lib/docker
-      - run: sudo tar -cf ./docker.tar /var/lib/docker
+      - run: sudo tar -cf ./docker.tar -C /var/lib/docker docker
       - run: ls
 #      - run: sudo tar -zxvf aaa.tar.gz
