--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,10 @@ jobs:
       - run: |
           sudo tar -xf ./docker.tar
           rm ./docker.tar
-      - run: |
-          sudo ls var/lib/docker
-#          sudo rm -rf /var/lib/docker
-#          sudo mv var/lib/docker /var/lib/docker
 
-      - run: ls slkdfjlksdjf
+      - run: |
+          sudo rm -rf /var/lib/docker/{image,overlay2}
+          sudo mv var/lib/docker /var/lib/docker
 
       - name: Start Docker daemon
         run: |
