--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,10 @@ jobs:
           restore-keys: ${{ runner.os }}-docker-cache-
           path: ./docker.tar
 
-      - run: |
-          sudo tar -xf ./docker.tar
-          rm ./docker.tar
-
-      - run: |
-          sudo rm -rf /var/lib/docker/{image,overlay2}
-          sudo mv var/lib/docker /var/lib/docker
+#      - run: |
+#          sudo tar -xf ./docker.tar
+#          sudo rm -rf /var/lib/docker
+#          sudo mv var/lib/docker /var/lib/docker
 
       - name: Start Docker daemon
         run: |
@@ -50,6 +47,6 @@ jobs:
           sudo kill $(pidof containerd) || true
           sleep 2
 
-      - run: sudo tar -cf ./docker.tar /var/lib/docker/image /var/lib/docker/overlay2
-      - run: ls
-#      - run: sudo tar -zxvf aaa.tar.gz
+      - run: |
+          rm ./docker.tar
+          sudo tar -cf ./docker.tar /var/lib/docker
